data/derived/fa15/progs/unify/prog3209.ml.out
Characters 51-52:
  let fixpoint (f,b) = wwhile(if f b = b then b else b, b);;
                                                     ^
Error: This expression has type ('a -> 'a * bool) * 'a
       but an expression was expected of type 'a -> 'a * bool
